--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
     "angular-storage": "0.0.15",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
+    "ngx-cookie-service": "^2.2.0",
     "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
