--- a/front/angular.json
+++ b/front/angular.json
@@ -24,6 +24,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/custom-theme.scss",
               "./node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css"
             ],
@@ -129,6 +130,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "front"
 }
