--- a/front/package.json
+++ b/front/package.json
@@ -12,16 +12,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.13",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.13",
     "@angular/compiler": "~8.2.13",
     "@angular/core": "~8.2.13",
     "@angular/forms": "~8.2.13",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
     "@auth0/angular-jwt": "^3.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "angular-storage": "0.0.15",
     "bootstrap": "^4.3.1",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "ngx-cookie-service": "^2.2.0",
     "popper.js": "^1.16.0",
