--- a/front/package.json
+++ b/front/package.json
@@ -23,10 +23,12 @@
     "@angular/router": "~8.2.13",
     "@auth0/angular-jwt": "^3.0.1",
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
+    "angular-jwt": "^0.1.11",
     "angular-storage": "0.0.15",
     "bootstrap": "^4.3.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
+    "jwt-decode": "^2.2.0",
     "ngx-cookie-service": "^2.2.0",
     "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
